ADDED: Business Memberships, Ad Subscriptions based on business membership.

--- a/src/app/features/business-features/business-features.component.html
+++ b/src/app/features/business-features/business-features.component.html
@@ -43,10 +43,6 @@
             <button class="spotbie-button sb-getStarted sbBetaBtn mt-4 mb-5" (click)="calendly()">
                 SCHEDULE DEMO
             </button>
-
-            <button class="spotbie-button sb-getStarted sbBetaBtn mt-4 mb-5" (click)="signUp()">
-                JOIN THE BETA
-            </button>
         </div>
     </ng-container>
 
@@ -54,9 +50,6 @@
         <div>
             <button class="spotbie-button sb-getStarted mt-5 mb-4" (click)="calendly()">
                 SCHEDULE DEMO
-            </button>
-            <button class="spotbie-button sb-getStarted mt-4 mb-5" (click)="signUp()">
-                JOIN THE BETA
             </button>
         </div>
     </ng-container>
@@ -66,6 +59,7 @@
       <div (click)="openPurchaseIncentives(3)">The Idea</div>
       <div (click)="openPurchaseIncentives(2)">How Does it work?</div>
       <div (click)="openPurchaseIncentives(1)">View Live Demo</div>
+      <div (click)="openPurchaseIncentives(0)">Pricing</div>
     </div>
 </section>
 
