--- a/src/app/make-payment/make-payment.component.html
+++ b/src/app/make-payment/make-payment.component.html
@@ -32,27 +32,30 @@
         </div>
 
         <div *ngIf="paymentType == 'business-membership'" class="mb-4">
-            <p class="spotbie-text-gradient text-uppercase mt-4">Business Membership $199.99/month</p>
+            <p class="spotbie-text-gradient text-uppercase mt-4">STARTER $159.99/month</p>
 
-            <p class="sb-text-light-green-gradient mt-4">2,000 LOYALTY POINTS</p>
-            <p class="sb-text-light-green-gradient mt-1">No Bonus Loyalty Points</p>
+            <p class="sb-text-light-green-gradient mt-4">Award Loyalty Points</p>
+            <p class="sb-text-light-green-gradient mt-1">Upload Rewards</p>
             <p class="sb-text-light-green-gradient mt-1">Default Max Reward Rate</p>
+            <p class="sb-text-light-green-gradient mt-1">Header Banner Ads</p>
         </div>
 
         <div *ngIf="paymentType == 'business-membership-1'" class="mb-4">
-            <p class="spotbie-text-gradient text-uppercase mt-4">Business Membership $299.99/month</p>
+            <p class="spotbie-text-gradient text-uppercase mt-4">Business Membership $259.99/month</p>
 
-            <p class="sb-text-light-green-gradient mt-4">3,500 LOYALTY POINTS</p>
-            <p class="sb-text-light-green-gradient mt-1">500 Bonus Loyalty Points</p>
+            <p class="sb-text-light-green-gradient mt-4">+Starter Package</p>
+            <p class="sb-text-light-green-gradient mt-1">+Header, Footer, Nearby Featured Ads</p>
             <p class="sb-text-light-green-gradient mt-1">+0.01% Max Reward Rate</p>
+            <p class="sb-text-light-green-gradient mt-1">+Text Messaging</p>
         </div>
 
         <div *ngIf="paymentType == 'business-membership-2'" class="mb-4">
             <p class="spotbie-text-gradient text-uppercase mt-4">Business Membership $399.99/month</p>
 
-            <p class="sb-text-light-green-gradient mt-4">4,750 LOYALTY POINTS</p>
-            <p class="sb-text-light-green-gradient mt-1">750 Bonus Loyalty Points</p>
+            <p class="sb-text-light-green-gradient mt-4">+Starter Package</p>
+            <p class="sb-text-light-green-gradient mt-1">+Header, Footer, Nearby Featured Ads</p>
             <p class="sb-text-light-green-gradient mt-1">+0.02% Max Reward Rate</p>
+            <p class="sb-text-light-green-gradient mt-1">+Customer Insights, Text Messaging, E-Mail, Push Notifications</p>
         </div>
 
         <p class='spotbie-login-terms spotbie-text-link'>
