--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -31,15 +31,16 @@
             <h1 class="text-uppercase sb-text-light-green-gradient" style="font-size: 1.2rem; padding: 0 10px;">STARTER</h1>
 
             <h2 class="text-uppercase spotbie-text-gradient">
-              $199.99/monthly
+              $159.99/monthly
             </h2>
 
             <img class="sb-logo-withStreet" #scheduleDemo src="assets/images/spotbie-miami-find-places-to-eat.png" />
 
             <div class="text-uppercase text-center">
-              <h3 class="sb-text-light-green-gradient">2,000 Loyalty Points</h3>
-              <p class="spotbie-text-gradient">No Bonus Loyalty Points</p>
+              <p class="spotbie-text-gradient">Award Loyalty Points</p>
+              <p class="spotbie-text-gradient">Upload Rewards</p>
               <p class="spotbie-text-gradient">Default Max Reward Rate</p>
+              <p class="spotbie-text-gradient">Header Banner Ads</p>
             </div>
 
             <button class="spotbie-button sb-getStarted mt-4 mb-5" (click)="goHome()">
@@ -51,15 +52,16 @@
             <h1 class="text-uppercase sb-text-light-green-gradient" style="font-size: 1.2rem; padding: 0 10px;">INTERMEDIATE</h1>
 
             <h2 class="text-uppercase spotbie-text-gradient">
-              $299.99/monthly
+              $259.99/monthly
             </h2>
 
             <img class="sb-logo-withStreet" #scheduleDemo src="assets/images/spotbie-miami-find-places-to-eat.png" />
 
             <div class="text-uppercase text-center">
-              <h3 class="sb-text-light-green-gradient">3,500 Loyalty Points</h3>
-              <p class="spotbie-text-gradient">500 Bonus Loyalty Points</p>
+              <p class="spotbie-text-gradient">+Starter Package</p>
+              <p class="spotbie-text-gradient">+Header Banner Ads</p>
               <p class="spotbie-text-gradient">+0.01% Max Reward Rate</p>
+              <p class="spotbie-text-gradient">+Text Messaging</p>
             </div>
 
             <button class="spotbie-button sb-getStarted mt-4 mb-5" (click)="goHome()">
@@ -71,15 +73,16 @@
             <h1 class="text-uppercase sb-text-light-green-gradient" style="font-size: 1.2rem; padding: 0 10px;">ULTIMATE</h1>
 
             <h2 class="text-uppercase spotbie-text-gradient">
-              $399.99/monthly
+              COMING SOON
             </h2>
 
             <img class="sb-logo-withStreet" #scheduleDemo src="assets/images/spotbie-miami-find-places-to-eat.png" />
 
             <div class="text-uppercase text-center">
-              <h3 class="sb-text-light-green-gradient">4,750 Loyalty Points</h3>
-              <p class="spotbie-text-gradient">750 Bonus Loyalty Points</p>
+              <p class="spotbie-text-gradient">+Starter Package</p>
+              <p class="spotbie-text-gradient">+Header, Footer, Nearby Featured Ads</p>
               <p class="spotbie-text-gradient">+0.02% Max Reward Rate</p>
+              <p class="spotbie-text-gradient">+Customer Insights, Text Messaging, E-Mail, Push Notifications</p>
             </div>
 
             <button class="spotbie-button sb-getStarted mt-4 mb-5" (click)="goHome()">
