--- a/src/app/spotbie/spotbie-logged-in/settings/settings.component.css
+++ b/src/app/spotbie/spotbie-logged-in/settings/settings.component.css
@@ -334,7 +334,8 @@ textarea{
   justify-content: center;
   flex-wrap: nowrap;
   flex-direction: row;
-  align-items: center;
+  align-items: stretch;
+  margin-bottom: 60px;
 }
 .spotbie-price-box div{
   margin-left: 20px;
@@ -342,6 +343,11 @@ textarea{
   border-radius: 20px;
   background-color: rgba(0,0,0,.25);
   padding: 40px;
+  display: grid;
+  justify-content: center;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  align-content: center;
 }
 .spotbie-price-box div:hover{
   cursor: pointer;
