--- a/src/app/does-it-work/does-it-work.component.html
+++ b/src/app/does-it-work/does-it-work.component.html
@@ -80,11 +80,11 @@
           <h2 class="sb-text-light-green-gradient mt-5">Enter SpotBie. Why us?</h2>
           <h2 class="sb-text-light-green-gradient mt-5">"IT'S ON US"... it's not a gimmick.</h2>
           <p>
-            Literally... the platform is free. You might ask why we do this, and the reality is that we do it because
-            customer interaction is what really drives our business model. Within the app, businesses are allowed to sign
-            up for monthly memberships that allow their business to be advertise to nearby users which keeps our business
-            model profitable. Every interaction between a nearby potential customer and your business creates an abundant
-            amount of data that we capitalize on.
+            Our businesses are refunded for awards between $50.00 USD and $75.00 USD. You might ask why we do this,
+            and the reality is that we do it because customer interaction is what really drives our business model.
+            Within the app, businesses are allowed to sign up for monthly memberships that allow their business to be
+            interact with nearby users which keeps our business model profitable. Every interaction between a nearby
+            potential customer and your business also creates an abundant amount of data that we capitalize on.
           </p>
 
           <h2 class="sb-text-light-green-gradient mt-5">Growing Brand Awareness</h2>
