--- a/src/app/does-it-work/does-it-work.component.html
+++ b/src/app/does-it-work/does-it-work.component.html
@@ -77,14 +77,13 @@
             wait long times for customer service, or be served by an untrained professional... and that's part of our duty to you.
           </p>
 
-          <h2 class="sb-text-light-green-gradient mt-5">Enter SpotBie. Why us?</h2>
-          <h2 class="sb-text-light-green-gradient mt-5">"IT'S ON US"... it's not a gimmick.</h2>
+          <h1 class="sb-text-light-green-gradient mt-5">Enter SpotBie. Why us?</h1>
+f
+          <h2 class="sb-text-light-green-gradient">Grow Sales Frequency and Volume</h2>
           <p>
-            Our businesses are refunded for awards between $50.00 USD and $75.00 USD. You might ask why we do this,
-            and the reality is that we do it because customer interaction is what really drives our business model.
-            Within the app, businesses are allowed to sign up for monthly memberships that allow their business to be
-            interact with nearby users which keeps our business model profitable. Every interaction between a nearby
-            potential customer and your business also creates an abundant amount of data that we capitalize on.
+            When users sign up to become SpotBie members, they make the conscious decision to commit to our Community Members
+            in exchange for rewards. We <i>know</i> our Community Members offer excellent products and services, now guests
+            have an additional reason to go to your business over your competition.
           </p>
 
           <h2 class="sb-text-light-green-gradient mt-5">Growing Brand Awareness</h2>
