ADDED: Sms history, Recent Guests, Material Theming, NGXS, Angular-ru state management REMOVED: NgRx

--- a/src/app/spotbie/spotbie-logged-in/business-dashboard/business-dashboard.component.html
+++ b/src/app/spotbie/spotbie-logged-in/business-dashboard/business-dashboard.component.html
@@ -41,7 +41,7 @@
       <app-download-business-mobile></app-download-business-mobile>
     </div>
 
-    <div class="sb-dashboardWrapper" #customerAppAnchor *ngIf="!displayBusinessSetUp && businessFetched">
+    <div class="sb-dashboardWrapper" #customerAppAnchor *ngIf="!displayBusinessSetUp && businessFetched && canUseCustomerManager">
       <app-customer-manager></app-customer-manager>
     </div>
 </div>
