--- a/src/app/spotbie/spotbie-logged-in/settings/settings.component.html
+++ b/src/app/spotbie/spotbie-logged-in/settings/settings.component.html
@@ -107,7 +107,7 @@
                 <tr>
                     <td>
                         <label class="spotbie-input-info spotbie-text-gradient mb-2">
-                            Phone number.
+                            Phone Number
                         </label>
                         <input class='sb-input'
                                 type='tel'
