--- a/src/app/spotbie/terms/terms.component.html
+++ b/src/app/spotbie/terms/terms.component.html
@@ -10,7 +10,7 @@
 
         <h1>Privacy Policy</h1>
         
-        <p>Last updated: November 07, 2020</p>
+        <p>Last updated: February 11, 2024</p>
         <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
         <p>We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy. This Privacy Policy has been created with the help of the <a href="https://www.termsfeed.com/privacy-policy-generator/" target="_blank">Privacy Policy Generator</a>.</p>
         
@@ -186,6 +186,8 @@
         <p>We may update Our Privacy Policy from time to time. We will notify You of any changes by posting the new Privacy Policy on this page.</p>
         <p>We will let You know via email and/or a prominent notice on Our Service, prior to the change becoming effective and update the &quot;Last updated&quot; date at the top of this Privacy Policy.</p>
         <p>You are advised to review this Privacy Policy periodically for any changes. Changes to this Privacy Policy are effective when they are posted on this page.</p>
+        <h2>Possible Use of your Phone Number</h2>
+        <p>By creating an account with SpotBie you are allowing the SpotBie platform to sign you up to receive SMS from our SpotBie Community Members. You can choose to enable/disable these messages anytime you want from the settings screen inside your personal account.</p>
         <h1>Contact Us</h1>
         <p>If you have any questions about this Privacy Policy, You can contact us:</p>
         <ul>
