--- a/src/app/spotbie/spotbie-logged-in/loyalty-points/loyalty-points.component.html
+++ b/src/app/spotbie/spotbie-logged-in/loyalty-points/loyalty-points.component.html
@@ -18,7 +18,7 @@
 
         <p class="mt-4 mb-4" (click)="initBusinessLoyaltyPoints()">
             <span [ngClass]="loyaltyPointsClass()" *ngIf="userType === eAllowedAccountTypes.Personal">
-                {{ loyaltyPointBalance | number:'1.0':'en-US' }}
+                {{ (loyaltyPointBalance$ | async) | number:'1.0':'en-US' }}
             </span>
 
             <span [ngClass]="loyaltyPointsClass()" *ngIf="userType !== eAllowedAccountTypes.Personal">
