CHANGED: Wording, styling

--- a/src/app/does-it-work/does-it-work.component.html
+++ b/src/app/does-it-work/does-it-work.component.html
@@ -21,9 +21,8 @@
         <div class="menu-padding"></div>
 
         <div class="does-itWork">
-          <h2 class="spotbie-text-gradient" *ngIf="!isMobile">ATTRACT AND RETAIN USERS</h2>
-          <h2 class="spotbie-text-gradient" *ngIf="isMobile">ATTRACT & RETAIN USERS</h2>
-          <h2 class="sb-text-light-green-gradient">Loyalty Programs & Marketing</h2>
+          <h2 class="spotbie-text-gradient">ATTRACT & RETAIN USERS</h2>
+          <h2 class="sb-text-light-green-gradient">Business Growth Assistant</h2>
 
           <h2 class="sb-text-light-green-gradient mt-5">Our Vision</h2>
           <p>
@@ -36,17 +35,15 @@
           <ul>
             <li>Loyalty Points and Rewards</li>
             <li>Algorithm Calculated Exposure</li>
-            <li>Local Results</li>
-<!--            <li>Site-wide Results</li>-->
+            <li>Local Exposure</li>
             <li>Ad Banners within our platform</li>
-<!--            <li>API Integrations</li>-->
+            <li>SMS and E-mail Campaigns</li>
+            <li>Access to Customer Insights</li>
           </ul>
 
           <h2 class="sb-text-light-green-gradient mt-5">Coming Soon</h2>
           <ul>
-            <li>SMS and E-mail Campaigns</li>
             <li>Geofence Marketing</li>
-            <li>Access to Customer Insights</li>
           </ul>
 
           <h2 class="sb-text-light-green-gradient mt-5">What problems does SpotBie solve?</h2>
@@ -164,7 +161,7 @@ f
             </p>-->
           </div>
 
-          <h2 class="sb-text-light-green-gradient mt-5">Use Customer Insight (Coming Soon)</h2>
+          <h2 class="sb-text-light-green-gradient mt-5">Use Customer Insight</h2>
           <p>
             SpotBie Community Members will have the ability to use their customer's data for their marketing efforts. On our
             business admin dashboard, you will find reports and utilities that will help maximize your business's efficiency.
