--- a/src/app/features/business-features/business-features.component.html
+++ b/src/app/features/business-features/business-features.component.html
@@ -4,16 +4,10 @@
     <!--<h1 class="text-uppercase sb-text-light-green-gradient" style="font-size: 1.8rem; padding: 0 10px;">GROW YOUR BUSINESS</h1>-->
 
     <img class="sb-logo-withStreet" #scheduleDemo src="assets/images/spotbie-miami-find-places-to-eat.png" />
-
     <br/>
 
-    <h1 class="text-uppercase sb-text-light-green-gradient" style="font-size: 1.8rem; padding: 0 10px;" *ngIf="isMobile">GROW YOUR<br/>BUSINESS</h1>
-    <h1 class="text-uppercase sb-text-light-green-gradient" style="font-size: 1.8rem; padding: 0 10px;" *ngIf="!isMobile">GROW YOUR BUSINESS</h1>
+    <h1 class="text-uppercase sb-text-light-green-gradient" style="font-size: 1.8rem; padding: 0 10px;">BUSINESS GROWTH<br/>ASSISTANT</h1>
     <br/>
-
-    <h2>
-        <span class='spotbie-text-gradient'>Award Loyalty Points</span>
-    </h2>
 
     <div class="sb-homePageIconsTable mt-4 mb-4">
       <div (click)="spawnCategories(1)">
@@ -32,9 +26,13 @@
       </div>
     </div>
 
+    <h2>
+      <span class='spotbie-text-gradient'></span>
+    </h2>
+
     <p class="text-center spotbie-text-gradient">
         <br/>
-        Offer exclusive discounts, drinks & food, merchandise, and more.
+        Local exposure, loyalty program, mass sms & email.
         <br/>
     </p>
 
@@ -69,7 +67,7 @@
     <img class='sb-greenIcon' src='assets/images/home_imgs/spotbie-green-icon.svg' />
 
     <h2 class="text-uppercase spotbie-text-gradient">
-        - NEW CUSTOMERS -
+        - ACQUISITION -
     </h2>
 
     <div class='sb-whiteIconBg right'></div>
@@ -97,7 +95,7 @@
     <img class='sb-greenIcon' src='assets/images/home_imgs/spotbie-green-icon.svg' />
 
     <h2 class="text-uppercase spotbie-text-gradient">
-        - RETAIN CUSTOMERS -
+        - RETENTION -
     </h2>
 
     <div class='sb-whiteIconBg left'></div>
@@ -111,7 +109,7 @@
     </div>
 
     <p class="spotbie-text-gradient text-center text-uppercase">
-        Keep them coming back with <span class='sb-text-light-green-gradient'>exclusive rewards</span>
+        Keep them <span class='sb-text-light-green-gradient'>coming back</span> with <span class='sb-text-light-green-gradient'>rewards</span>
         <br/><br/>
     </p>
 
@@ -132,12 +130,10 @@
     <div class='sb-whiteIconBg right'></div>
 
     <div class="text-uppercase text-center">
-
         <br/>
         <h3 class="sb-text-light-green-gradient">SOMETHING EXCITING</h3>
         <h4 class="spotbie-text-gradient">FOR CONSUMERS</h4>
         <br/>
-
     </div>
 
     <p class="spotbie-text-gradient text-center text-uppercase">
