--- a/src/app/how-does-it-work/how-does-it-work.component.html
+++ b/src/app/how-does-it-work/how-does-it-work.component.html
@@ -32,6 +32,23 @@
             start awarding your users.
           </p>
 
+          <h2 class="sb-text-light-green-gradient mt-5">Local Exposure</h2>
+          <p>
+            Your business will be listed in our platform to users who are ready to spend. SpotBie users open the SpotBie because
+            they are ready to go to the next step in the sales funnel; and that is making the purchase. It's just a question of where
+            they will go now.
+
+            We advertise our local SpotBie Community Members in different ways; at local events, gatherings, meet-ups,
+            breaches, parks, and more. You won't have to worry about managing your ads campaign with us.
+          </p>
+
+          <h2 class="sb-text-light-green-gradient mt-5">In-Platform Advertising</h2>
+          <p>
+            As part of your membership, you will receive a new in-app Ad design every six months. Everyone gets a fair chance
+            for the spot-light in our app. Our algorithm assigns SpotBie Community Exposure in an orderly manner so that all of
+            them get the same amount of views.
+          </p>
+
           <h2 class="sb-text-light-green-gradient mt-5">Loyalty Points</h2>
           <p>
             Our users claim Loyalty Points by scanning receipts from their everyday purchases. SpotBie users can then
