--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -21,12 +21,11 @@
         <div class="menu-padding"></div>
 
         <div class="mb-3">
-          <h2 class="spotbie-text-gradient" *ngIf="!isMobile">START ATTRACTING MORE USERS</h2>
-          <h2 class="spotbie-text-gradient" *ngIf="isMobile">ATTRACT MORE USERS</h2>
-          <h2 class="sb-text-light-green-gradient">WITH REWARDS & LOYALTY POINTS</h2>
+          <h2 class="spotbie-text-gradient">GROW YOUR BUSINESS</h2>
+          <h2 class="sb-text-light-green-gradient">Local exposure, loyalty, marketing, and insight.</h2>
         </div>
 
-        <div id="pricing1" class="mt-5" #attractNewCustomers>
+        <div id="pricing1" class="mt-5 mb-5" #attractNewCustomers>
           <div class="sb-packetWrapper">
             <h1 class="text-uppercase sb-text-light-green-gradient" style="font-size: 1.2rem; padding: 0 10px;">STARTER</h1>
 
@@ -34,13 +33,10 @@
               $159.99/monthly
             </h2>
 
-            <img class="sb-logo-withStreet" #scheduleDemo src="assets/images/spotbie-miami-find-places-to-eat.png" />
-
             <div class="text-uppercase text-center">
-              <p class="spotbie-text-gradient">Award Loyalty Points</p>
-              <p class="spotbie-text-gradient">Upload Rewards</p>
+              <p class="spotbie-text-gradient">Loyalty Program</p>
+              <p class="spotbie-text-gradient">Local Exposure</p>
               <p class="spotbie-text-gradient">Default Max Reward Rate</p>
-              <p class="spotbie-text-gradient">Header Banner Ads</p>
             </div>
 
             <button class="spotbie-button sb-getStarted mt-4 mb-5" (click)="goHome()">
@@ -55,13 +51,12 @@
               $259.99/monthly
             </h2>
 
-            <img class="sb-logo-withStreet" #scheduleDemo src="assets/images/spotbie-miami-find-places-to-eat.png" />
-
             <div class="text-uppercase text-center">
               <p class="spotbie-text-gradient">+Starter Package</p>
               <p class="spotbie-text-gradient">+Header Banner Ads</p>
               <p class="spotbie-text-gradient">+0.01% Max Reward Rate</p>
-              <p class="spotbie-text-gradient">+Text Messaging</p>
+              <p class="spotbie-text-gradient">+Text Messaging (5,000 sms)</p>
+              <p class="spotbie-text-gradient">+Customer Insights</p>
             </div>
 
             <button class="spotbie-button sb-getStarted mt-4 mb-5" (click)="goHome()">
@@ -76,13 +71,12 @@
               COMING SOON
             </h2>
 
-            <img class="sb-logo-withStreet" #scheduleDemo src="assets/images/spotbie-miami-find-places-to-eat.png" />
-
             <div class="text-uppercase text-center">
               <p class="spotbie-text-gradient">+Starter Package</p>
               <p class="spotbie-text-gradient">+Header, Footer, Nearby Featured Ads</p>
               <p class="spotbie-text-gradient">+0.02% Max Reward Rate</p>
-              <p class="spotbie-text-gradient">+Customer Insights, Text Messaging, E-Mail, Push Notifications</p>
+              <p class="spotbie-text-gradient">+Text Messaging, E-Mail</p>
+              <p class="spotbie-text-gradient">+Automated Push Notifications</p>
             </div>
 
             <button class="spotbie-button sb-getStarted mt-4 mb-5" (click)="goHome()">
