--- a/src/app/pricing/pricing.component.css
+++ b/src/app/pricing/pricing.component.css
@@ -70,14 +70,13 @@ h6{
 #pricing1{
   display: flex;
   align-content: center;
-  align-items: center;
+  align-items: stretch;
   justify-content: center;
 }
 .menu-padding{
   margin-top: 120px;
 }
 .sb-packetWrapper{
-  display: inline-block;
   max-width: 325px;
   width: 325px;
   margin-left: 25px;
@@ -85,6 +84,9 @@ h6{
   border-radius: 20px;
   padding: 25px 30px;
   border: 1px solid #d5d5d526;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 .sb-packetWrapper span,
 .sb-packetWrapper p{
